# nexaquanta_assessment

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: api.py
app/api/endpoints/: auth.py  blog.py  user.py
app/controllers/: auth.py  blog.py  user.py
app/core/: cache.py  config.py  database.py  exceptions.py  jwt.py  middlewares.py  password.py  server.py
app/core/dependencies/: current_user.py
app/models/: blog.py  user.py
app/repositories/: base_repo.py  blog.py  user.py
app/schemas/: blog.py  user.py
app/utils/: date_utils.py  logger.py
migrations/: env.py
migrations/versions/: 2025-03-27-22-16_b40a83f97ac8.py
nginx/: nginx.conf
tests/: test_auth.py  test_blog.py  test_user.py
