[tool.poetry]
name = "nexaquanta-assessment"
version = "0.1.0"
description = ""
authors = ["azazrashid <azazrashid797@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
pydantic = {extras = ["email"], version = "^2.10.6"}
pydantic-settings = "^2.8.1"
psycopg2-binary = "^2.9.10"
alembic = "^1.15.1"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"
passlib = "^1.7.4"
python-jose = "^3.4.0"
greenlet = "^3.1.1"
pytz = "^2025.2"
python-multipart = "^0.0.20"
bcrypt = "^4.3.0"
setuptools = "^78.1.0"
redis = "^5.2.1"
idna = "=3.6"
poetry-plugin-export = "^1.9.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
